--- a/src/app/principal/geral/geral.component.html
+++ b/src/app/principal/geral/geral.component.html
@@ -1,14 +1,17 @@
 
 <nav class="blue darken-2">
     <div class="nav-wrapper">
-        <p class="brand-logo left">Smartnote</p>
+        <p class="brand-logo">Smartnote</p>
     </div>
 </nav>
 
 <div>
     <div class="row">
         <div class="col s12 m12">
-            <a routerLink="categoria/lista"><h5>Matérias</h5></a>
+            <h5>
+                Últimas matérias
+                <a routerLink="/principal/categoria/lista" style="float: right; font-size: 18px;">Todas matérias</a>
+            </h5>
         </div>
     </div>
 </div>
@@ -44,7 +47,10 @@
 <div>
     <div class="row">
         <div class="col s12 m12">
-            <h5>Últimas anotações</h5>
+            <h5>
+                Últimas anotações
+                <a routerLink="/principal/anotacao/lista" style="float: right; font-size: 18px;">Todas anotações</a>
+            </h5>
         </div>
     </div>
 </div>
