--- a/src/app/principal/anotacao/anotacao.component.html
+++ b/src/app/principal/anotacao/anotacao.component.html
@@ -1,7 +1,7 @@
 <nav class="blue darken-2">
     <div class="nav-wrapper">
-        <a routerLink="/principal/categoria" class="brand-logo">Smartnote</a>
-        <a routerLink="/principal/categoria"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
+        <a routerLink="/principal" class="brand-logo">Smartnote</a>
+        <a routerLink="/principal"><i class="material-icons" style="left: 10px; position: absolute;">arrow_back_ios</i></a>
     </div>
 </nav>
 
