--- a/src/app/principal/categoria/lista/lista.component.html
+++ b/src/app/principal/categoria/lista/lista.component.html
@@ -22,7 +22,7 @@
             <div class="card" >
                 <!-- <span>{{ categoria.id }}</span> -->
 
-                <a routerLink="/principal/categoria/categoria/{{categoria.id}}">
+                <a routerLink="/principal/categoria/{{categoria.id}}">
                     <div class="card-image">
                         <img src="https://library.harvard.edu/sites/default/files/styles/carousel_1200_x_900/public/poets_blue.jpg?itok=jxricHTp">
                         <span class="card-title">{{ categoria.nome }}</span>
