--- a/src/app/principal/geral/geral.component.html
+++ b/src/app/principal/geral/geral.component.html
@@ -20,9 +20,14 @@
 <div>
     <div class="row">
 
+        <span *ngIf="!listCategorias" style="text-align: center;">
+            <p>
+                Nenhuma matéria<br>
+                <a routerLink="/principal/categoria/add">criar matéria</a>
+            </p>
+        </span>
         <div class="col s6 m2" *ngFor="let categoria of listCategorias | slice:0:2">
             <div class="card" >
-                <!-- <span>{{ categoria.id }}</span> -->
 
                 <a routerLink="/principal/categoria/">
                     <div class="card-image">
@@ -57,6 +62,12 @@
 
 <!-- Lista de anotações -->
 <div>
+    <span *ngIf="!listCategorias" style="text-align: center;">
+        <p>
+            Nenhuma matéria<br>
+            <a routerLink="/principal/categoria/add">criar matéria</a>
+        </p>
+    </span>
     <ul class="collection">
         
         <li class="collection-item avatar" style="min-height: 55px !important;" *ngFor="let anotacao of listAnotacoes">
