--- a/src/app/principal/anotacao/add/add.component.html
+++ b/src/app/principal/anotacao/add/add.component.html
@@ -7,7 +7,7 @@
 
 <div>
     <div class="row">
-        
+
         <div class="col s12 m12">
             <h5>Criando nova anotação</h5>
         </div>
@@ -16,9 +16,9 @@
 
         <div class="row">
             <form class="col s12 m12">
-                
+
                 <div class="row">
-                    
+
                     <div class="input-field col s12 m12">
                         <input id="nome" type="text" class="validate">
                         <label for="nome" class="">Nome</label>
@@ -28,9 +28,9 @@
                         <input id="texto" type="text" class="validate">
                         <label for="texto">Texto</label>
                     </div>
-                    
+
                     <div class="input-field col s12 m12">
-                        <select class="form-control">
+                        <select id="categoriaId" class="form-control">
                             <option *ngFor="let item of list" value= {{item.id}}>
                                 {{item.nome}}
                             </option>
@@ -38,7 +38,7 @@
                     </div>
 
                 </div>
-                
+
             </form>
         </div><!--row-->
 
@@ -48,6 +48,6 @@
 <!-- Floating button -->
 <div class="fixed-action-btn">
     <a class="btn-floating btn-large blue accent-1">
-        <i class="large material-icons">check</i>
+        <i (click)="onSubmit()" class="large material-icons">check</i>
     </a>
 </div>
