--- a/src/app/principal/categoria/lista/lista.component.html
+++ b/src/app/principal/categoria/lista/lista.component.html
@@ -15,10 +15,9 @@
 
 <!-- ultimas matérias -->
 <div>
-    
-    <div class="row">
 
-        <div class="col s6 m2" *ngFor="let categoria of list">
+    <div class="row">
+        <div class="col s6 m2" *ngFor="let categoria of items">
             <div class="card" >
                 <!-- <span>{{ categoria.id }}</span> -->
 
