--- a/src/app/principal/anotacao/add/add.component.html
+++ b/src/app/principal/anotacao/add/add.component.html
@@ -25,8 +25,8 @@
                     </div>
 
                     <div class="input-field col s12 m12">
-                        <input id="texto" type="text" class="validate">
-                        <label for="texto">Texto</label>
+                      <textarea id="texto" style="height: 200px;" class="materialize-textarea validate"></textarea>
+                      <label for="texto">Texto</label>
                     </div>
 
                     <div class="input-field col s12 m12">
