--- a/src/app/principal/categoria/categoria.component.html
+++ b/src/app/principal/categoria/categoria.component.html
@@ -8,7 +8,7 @@
 <div>
     <div class="row">
         <div class="parallax-container">
-            <div class="parallax"><img style="opacity: 1;" src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg"></div>
+            <div class="parallax"><img style="opacity: 1;" src="https://library.harvard.edu/sites/default/files/styles/carousel_1200_x_900/public/poets_blue.jpg?itok=jxricHTp"></div>
         </div>
         <div class="col s12 m12">
             <h5>{{ item?.nome }}</h5>
