--- a/src/app/login/signup/signup.component.html
+++ b/src/app/login/signup/signup.component.html
@@ -1,1 +1,50 @@
-<p>signup works!</p>
+<div class="container" style="margin-top:90px;">
+    <div class="row">
+        <div class="col s12 m6 offset-m3">
+
+            <div class="card-panel z-depth-5">
+
+                <h4 class="center">Smartnote</h4>
+                <h5 class="center">Criando conta</h5>
+                <div style="margin-bottom: 20px;"></div>
+                <div class="row">
+
+                    <div class="container">
+
+                        <!-- <h5>Faça Login:</h5> -->
+
+                        <div class="row">
+                          <form class="col s12">
+                            <div class="row">
+                              <div class="input-field col s12">
+                                <input id="email" type="email" class="validate">
+                                <label for="email">Email</label>
+                              </div>
+                            </div>
+
+                            <div class="row">
+                              <div class="input-field col s12">
+                                <input id="password" type="password" class="validate">
+                                <label for="password">Password</label>
+                              </div>
+                            </div>
+
+                          </form>
+                        </div>
+
+                        <div class="row center">
+                          <div (click)="criarConta()" class="google-btn col s12 blue darken-3">
+                              <p class="btn-text">Cadastrar</p>
+                          </div>
+                          <p style="float: left;"><a routerLink="/login/signin">Já tenho conta</a></p>
+                        </div>
+
+                    </div>
+
+                </div><!--row-->
+            </div><!--card-->
+
+
+        </div><!--col-->
+    </div><!--row-->
+</div><!--container-->
