--- a/src/app/principal/anotacao/anotacao.component.html
+++ b/src/app/principal/anotacao/anotacao.component.html
@@ -31,8 +31,8 @@
 
                     <div class="row">
                         <div class="container">
-                            <div class="col s12">
-                                <img class="materialboxed" data-caption="A picture" src="https://cdn.pixabay.com/photo/2018/09/09/13/32/fantasy-3664586_960_720.jpg" style="max-width:100%">
+                            <div *ngFor="let image of item.imagens">
+                                <img class="materialboxed col s6" data-caption="" [src]="image">
                             </div>
                         </div>
                     </div>
