--- a/src/app/login/signup/signup.component.html
+++ b/src/app/login/signup/signup.component.html
@@ -25,7 +25,13 @@
                             <div class="row">
                               <div class="input-field col s12">
                                 <input id="password" type="password" class="validate">
-                                <label for="password">Password</label>
+                                <label for="password">Senha</label>
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="input-field col s12">
+                                <input id="confirmPassword" type="password" class="validate">
+                                <label for="confirmPassword">Confirme a senha</label>
                               </div>
                             </div>
 
